add birthday and entranceDate to calculate age and grade